fixed hero banner overlap

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -105,6 +105,12 @@
   animation: intro 0.3s both;
   animation-delay: 0.25s;
 
+  @include breakpoint($large) {
+    @include span(10 of 12 last);
+    @include prefix(2.5 of 12);
+    @include suffix(0 of 12);
+  }
+
   &--overlay {
     position: relative;
     margin-bottom: 2em;
